--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "angular-ui-router": "~0.2.13",
     "angular": "~1.3.15",
     "less.js": "~2.5.0",
-    "gsap": "~1.16.1"
+    "gsap": "~1.16.1",
+    "angular-animate": "~1.3.15"
   }
 }
