--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "angular": "~1.3.15",
     "less.js": "~2.5.0",
     "gsap": "~1.16.1",
-    "angular-animate": "~1.3.15"
+    "angular-animate": "~1.3.15",
+    "normalize.css": "~3.0.3"
   }
 }
