--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
     "less.js": "~2.5.0",
     "gsap": "~1.16.1",
     "angular-animate": "~1.3.15",
-    "normalize.css": "~3.0.3"
+    "normalize.css": "~3.0.3",
+    "countUp.js": "~1.3.3"
   }
 }
