try to implement feature with crosshair

--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,7 @@
-AuthUserFile 
-/kunden/homepages/15/d576140538/htdocs/preprod/.htpasswd
-AuthName "Restricted Access"
-AuthType Basic
-<limit GET>
-require valid-user
-</Limit>
+#AuthUserFile 
+#/kunden/homepages/15/d576140538/htdocs/preprod/.htpasswd
+#AuthName "Restricted Access"
+#AuthType Basic
+#<limit GET>
+#require valid-user
+#</Limit>
