add google analytics && google webmastertools

--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,1 @@
-AuthUserFile 
-/kunden/homepages/15/d576140538/htdocs/preprod/.htpasswd
-AuthName "Restricted Access"
-AuthType Basic
-<limit GET>
-require valid-user
-</Limit>
+RequestHeader set X-Prerender-Token "ldg3mqHifInXDVilLlor"
